Code smell fix: Replacing ImmutableMap by Map