@@ -19,7 +19,6 @@
  */
 package org.sonar.ce.task.projectanalysis.step;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -40,18 +39,18 @@ import org.sonar.scanner.protocol.output.ScannerReport.ComponentLink.ComponentLi
 import static com.google.common.base.Preconditions.checkArgument;
 
 public class PersistProjectLinksStep implements ComputationStep {
-
   private final AnalysisMetadataHolder analysisMetadataHolder;
   private final DbClient dbClient;
   private final TreeRootHolder treeRootHolder;
   private final BatchReportReader reportReader;
   private final UuidFactory uuidFactory;
 
-  private static final Map<ComponentLinkType, String> typesConverter = ImmutableMap.of(
+  private static final Map<ComponentLinkType, String> typesConverter = Map.of(
     ComponentLinkType.HOME, ProjectLinkDto.TYPE_HOME_PAGE,
     ComponentLinkType.SCM, ProjectLinkDto.TYPE_SOURCES,
     ComponentLinkType.CI, ProjectLinkDto.TYPE_CI,
-    ComponentLinkType.ISSUE, ProjectLinkDto.TYPE_ISSUE_TRACKER);
+    ComponentLinkType.ISSUE, ProjectLinkDto.TYPE_ISSUE_TRACKER
+  );
 
   public PersistProjectLinksStep(AnalysisMetadataHolder analysisMetadataHolder, DbClient dbClient, TreeRootHolder treeRootHolder,
     BatchReportReader reportReader, UuidFactory uuidFactory) {
